<resources>
    <string name="app_name">HomeStuffApp</string>
    <string name="txt_img">ListView Image</string>
    <string name="btnAddToCart">Add To Cart</string>
    <string name="btnCancel">Cancel</string>
    <string name="tvAppName">Home Stuff</string>
    <string name="tvWelcome">Home Stuff</string>
    <string name="tvEmail">Email</string>
    <string name="tvPassword">Password</string>
    <string name="tvSignUpRedirectText">Not yet registered? Sign up.</string>
    <string name="btLogin">Login</string>
    <string name="btSignUp">Sign Up</string>
    <string name="tvLoginRedirectText">Already an user? Login</string>
    <string name="tvFirstName">First Name</string>
    <string name="tvLastName">Last Name</string>
    <string name="tvPhone">Phone</string>
    <string name="tvAddress">Address</string>
    <string name="tvUserName">Username</string>
    <string name="tvUserNameLog">Username</string>
    <string name="tvConfirmPsw">Confirm password</string>
    <array name="spnrArrShippingMethod">
        <item>Pick up</item>
        <item>Delivery</item>
    </array>
</resources>