<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/cardview_light_background"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="573dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp">

            <EditText
                android:id="@+id/tvFirstName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_account_box_24"
                android:drawablePadding="8dp"
                android:gravity=""
                android:hint="@string/tvFirstName"
                android:inputType="text|textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/lavender"
                android:textColorHint="#5C6BC0"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/tvLastName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_account_box_24"
                android:drawablePadding="8dp"
                android:gravity=""
                android:hint="@string/tvLastName"
                android:inputType="text|textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/lavender"
                android:textColorHint="#5C6BC0"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:gravity=""
                android:hint="@string/tvEmail"
                android:inputType="text|textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/lavender"
                android:textColorHint="#5C6BC0"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_account_box_24"
                android:drawablePadding="8dp"
                android:gravity=""
                android:hint="@string/tvPhone"
                android:inputType="phone"
                android:padding="8dp"
                android:textColor="@color/lavender"
                android:textColorHint="#5C6BC0"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_account_box_24"
                android:drawablePadding="8dp"
                android:gravity=""
                android:hint="@string/tvAddress"
                android:inputType="text|textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/lavender"
                android:textColorHint="#5C6BC0"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/tvUserName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_account_box_24"
                android:drawablePadding="8dp"
                android:gravity=""
                android:hint="@string/tvUserName"
                android:inputType="text|textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/lavender"
                android:textColorHint="#5C6BC0"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:gravity=""
                android:hint="@string/tvPassword"
                android:inputType="text|textPassword"
                android:padding="8dp"
                android:textColor="@color/lavender"
                android:textColorHint="#5C6BC0"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/tvConfirmPsw"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:gravity=""
                android:hint="@string/tvConfirmPsw"
                android:inputType="text|textPassword"
                android:padding="8dp"
                android:textColor="@color/lavender"
                android:textColorHint="#5C6BC0"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <Button
                android:id="@+id/btSignUp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/lavender"
                android:backgroundTint="@color/lavender"
                android:gravity="center"
                android:text="@string/btSignUp"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            <TextView
                android:id="@+id/tvLoginRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:text="@string/tvLoginRedirectText"
                android:textColor="#5C6BC0"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>