<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#8591F6"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/teal_200"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_edittext"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/tvAppName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAppName"
                    android:textAlignment="center"
                    android:textColor="@color/lavender"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/tvUserNameLog"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_account_box_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/tvUserNameLog"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/lavender"
                    android:textColorHint="#5C6BC0"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/tvPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:gravity=""
                    android:hint="@string/tvPassword"
                    android:inputType="text|textPassword"
                    android:padding="8dp"
                    android:textColor="@color/lavender"
                    android:textColorHint="#5C6BC0"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/lavender"
                    android:backgroundTint="@color/lavender"
                    android:gravity="center"
                    android:text="@string/btLogin"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    tools:ignore="TextContrastCheck,VisualLintButtonSize" />

                <TextView
                    android:id="@+id/tvSignupRedirectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="8dp"
                    android:text="@string/tvSignUpRedirectText"
                    android:textColor="#5C6BC0"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>