<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/cardview_light_background"
        tools:context=".SignUpActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="573dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_edittext"
                android:orientation="vertical"
                android:padding="24dp">

                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/person_24px"
                    android:drawablePadding="8dp"
                    android:gravity=""
                    android:hint="@string/tvFirstName"
                    android:inputType="text|textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/lavender"
                    android:textColorHint="#5C6BC0"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/person_24px"
                    android:drawablePadding="8dp"
                    android:gravity=""
                    android:hint="@string/tvLastName"
                    android:inputType="text|textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/lavender"
                    android:textColorHint="#5C6BC0"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/mail_24px"
                    android:drawablePadding="8dp"
                    android:gravity=""
                    android:hint="@string/tvEmail"
                    android:inputType="text|textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/lavender"
                    android:textColorHint="#5C6BC0"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/contact_phone_24px"
                    android:drawablePadding="8dp"
                    android:gravity=""
                    android:hint="@string/tvPhone"
                    android:inputType="phone"
                    android:padding="8dp"
                    android:textColor="@color/lavender"
                    android:textColorHint="#5C6BC0"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/family_home_24px"
                    android:drawablePadding="8dp"
                    android:gravity=""
                    android:hint="@string/tvAddress"
                    android:inputType="text|textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/lavender"
                    android:textColorHint="#5C6BC0"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/id_card_24px"
                    android:drawablePadding="8dp"
                    android:gravity=""
                    android:hint="@string/tvUserName"
                    android:inputType="text|textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/lavender"
                    android:textColorHint="#5C6BC0"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/password_24_px"
                    android:drawablePadding="8dp"
                    android:gravity=""
                    android:hint="@string/tvPassword"
                    android:inputType="text|textPassword"
                    android:padding="8dp"
                    android:textColor="@color/lavender"
                    android:textColorHint="#5C6BC0"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/etConfirmPsw"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/password_24_px"
                    android:drawablePadding="8dp"
                    android:gravity=""
                    android:hint="@string/tvConfirmPsw"
                    android:inputType="text|textPassword"
                    android:padding="8dp"
                    android:textColor="@color/lavender"
                    android:textColorHint="#5C6BC0"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <Button
                    android:id="@+id/btUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/lavender"
                    android:backgroundTint="@color/lavender"
                    android:gravity="center"
                    android:text="@string/btUpdate"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>